[package]
name = "racher"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libracher"
path = "src/lib.rs"

[[bin]]
name = "racher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
dashmap = {version = "4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
