[package]
name = "racher"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libracher"
path = "src/lib.rs"

[[bin]]
name = "racher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
warp = {version = "0.3", features = ["compression"]}
reqwest = { version = "0.11", features = ["gzip", "json"] }
url = {version = "*", features = ["serde"]}
tower = {version = "*", features = ["full"] }
dashmap = {version = "4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-value = "0.7"
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
chrono = "0.4"
rand = "0.8"
sha3 = "0.9"
base64 = "0.13"
cfg-if = "1.0"

[features]
default = ["dashboard"]
dashboard = []
